--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <nav class="navbar">
                 <a class="active" href="#home"><i class="fas fa-home"></i> Home</a>
-                <a href="#Menu"> <i class="fas fa-utensils"></i> Menu</a>
-                <a href="#About"><i class="fas fa-info-circle"></i> About Us</a>
+                <a href="#dishes"> <i class="fas fa-utensils"></i> Menu</a>
+                <a href="category.html"><i class="fas fa-info-circle"></i> Category</a>
                 <a href="#Review"> Reviews</a> 
                 <!-- <a href="#Favourites"><i class="fas fa-heart"></i> </a> -->
                 <!-- <a href="#Cart"><i class="fas fa-shopping-cart"></i> </a> -->
@@ -503,7 +503,7 @@
         <div class="box">
             <a href="#" class="fas fa-heart"></a>
             <a href="#" class="fas fa-eye"></a>
-            <img src="./Landing Page Assets/ (2).jpg" alt="pasta">
+            <img src="./Landing Page Assets/pasta.jpeg" alt="pasta">
             <h3>Spicy Rolls</h3>
 
             <div class="stars">
